--- a/public/index.html
+++ b/public/index.html
@@ -27,9 +27,12 @@
     -->
     <title>React App</title>
   </head>
-  <body>
+  <body style="background-color: #4c8bab;;">
+    
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <div id="Modal"></div>
+  
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
